docs/envoy/v1.19.1/_sources/api-v3/extensions/filters/http/router/v3/router.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/filters/http/router/v3/router.proto:

Router
======


This documentation is for the Envoy v3 API.

As of Envoy v1.18 the v2 API has been removed and is no longer supported.

If you are upgrading from v2 API config you may wish to view the v2 API documentation:

    :ref:`config/filter/http/router/v2/router.proto <v1.17.2:envoy_api_file_envoy/config/filter/http/router/v2/router.proto>`



.. _extension_envoy.filters.http.router:

This extension may be referenced by the qualified name ``envoy.filters.http.router``

.. note::
  

  This extension is intended to be robust against untrusted downstream traffic. It assumes that the upstream is trusted.

.. tip::
  This extension extends and can be used with the following extension category:


  - :ref:`envoy.filters.http <extension_category_envoy.filters.http>`

Router :ref:`configuration overview <config_http_filters_router>`.

.. _envoy_v3_api_msg_extensions.filters.http.router.v3.Router:

extensions.filters.http.router.v3.Router
----------------------------------------

:repo:`[extensions.filters.http.router.v3.Router proto] <api/envoy/extensions/filters/http/router/v3/router.proto#L22>`


.. code-block:: json

  {
    "dynamic_stats": "{...}",
    "start_child_span": "...",
    "upstream_log": [],
    "suppress_envoy_headers": "...",
    "strict_check_headers": [],
    "respect_expected_rq_timeout": "...",
    "suppress_grpc_request_failure_code_stats": "..."
  }

.. _envoy_v3_api_field_extensions.filters.http.router.v3.Router.dynamic_stats:

dynamic_stats
  (`BoolValue <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#boolvalue>`_) Whether the router generates dynamic cluster statistics. Defaults to
  true. Can be disabled in high performance scenarios.
  
  
.. _envoy_v3_api_field_extensions.filters.http.router.v3.Router.start_child_span:

start_child_span
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Whether to start a child span for egress routed calls. This can be
  useful in scenarios where other filters (auth, ratelimit, etc.) make
  outbound calls and have child spans rooted at the same ingress
  parent. Defaults to false.
  
  
.. _envoy_v3_api_field_extensions.filters.http.router.v3.Router.upstream_log:

upstream_log
  (**repeated** :ref:`config.accesslog.v3.AccessLog <envoy_v3_api_msg_config.accesslog.v3.AccessLog>`) Configuration for HTTP upstream logs emitted by the router. Upstream logs
  are configured in the same way as access logs, but each log entry represents
  an upstream request. Presuming retries are configured, multiple upstream
  requests may be made for each downstream (inbound) request.
  
  
.. _envoy_v3_api_field_extensions.filters.http.router.v3.Router.suppress_envoy_headers:

suppress_envoy_headers
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Do not add any additional *x-envoy-* headers to requests or responses. This
  only affects the :ref:`router filter generated *x-envoy-* headers
  <config_http_filters_router_headers_set>`, other Envoy filters and the HTTP
  connection manager may continue to set *x-envoy-* headers.
  
  
.. _envoy_v3_api_field_extensions.filters.http.router.v3.Router.strict_check_headers:

strict_check_headers
  (**repeated** `string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Specifies a list of HTTP headers to strictly validate. Envoy will reject a
  request and respond with HTTP status 400 if the request contains an invalid
  value for any of the headers listed in this field. Strict header checking
  is only supported for the following headers:
  
  Value must be a ','-delimited list (i.e. no spaces) of supported retry
  policy values:
  
  * :ref:`config_http_filters_router_x-envoy-retry-grpc-on`
  * :ref:`config_http_filters_router_x-envoy-retry-on`
  
  Value must be an integer:
  
  * :ref:`config_http_filters_router_x-envoy-max-retries`
  * :ref:`config_http_filters_router_x-envoy-upstream-rq-timeout-ms`
  * :ref:`config_http_filters_router_x-envoy-upstream-rq-per-try-timeout-ms`
  
  
.. _envoy_v3_api_field_extensions.filters.http.router.v3.Router.respect_expected_rq_timeout:

respect_expected_rq_timeout
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If not set, ingress Envoy will ignore
  :ref:`config_http_filters_router_x-envoy-expected-rq-timeout-ms` header, populated by egress
  Envoy, when deriving timeout for upstream cluster.
  
  
.. _envoy_v3_api_field_extensions.filters.http.router.v3.Router.suppress_grpc_request_failure_code_stats:

suppress_grpc_request_failure_code_stats
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set, Envoy will avoid incrementing HTTP failure code stats
  on gRPC requests. This includes the individual status code value
  (e.g. upstream_rq_504) and group stats (e.g. upstream_rq_5xx).
  This field is useful if interested in relying only on the gRPC
  stats filter to define success and failure metrics for gRPC requests
  as not all failed gRPC requests charge HTTP status code metrics. See
  :ref:`gRPC stats filter<config_http_filters_grpc_stats>` documentation
  for more details.
  
  

